--- a/lightbox31219.html
+++ b/lightbox31219.html
@@ -12,7 +12,7 @@
   crossorigin="anonymous"></script>
 
     <style>
-    #lightbox {
+    /* #lightbox {
       display: none;
       position: fixed;
       top: 0;
@@ -34,13 +34,13 @@
       margin-right: 30px;
       margin-top: 30px;
     }
-    #carrr{
+    #carrr {
       box-shadow: 10px 10px 5px #000;
     }
     .gallery {
       height: 200px;
       margin-left: 10px;
-    }
+    } */
   </style>
 
   </head>
